syntax = "proto3";

option go_package = "./";

message HelloRequest {
    string SomeString = 1;
}

message HelloResponse {
    string Response = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}